tests/error/conflict_super.gw
// [contains] function name 'test' conflicts with previously defined value
class C
	{ int test; }
class D extends C
	{ function void test(){} }
